<resources>
    <string name="app_name">PaeParo</string>

    <string name="sample_text_btn_back">뒤로가기</string>
    <string name="sample_text_btn_google_login">Google 계정으로 시작</string>
    <string name="sample_text_login_title">여정의 시작을 PaeParo와 함께 해보세요</string>
    <string name="sample_text_post_image">게시물 사진</string>
    <string name="sample_text_like">좋아요</string>
    <string name="hint_write_comment">댓글 작성…</string>
    <string name="desc_write_comment">댓글 추가</string>
    <string name="sample_text_show_all_text">펼쳐서 내용보기</string>
    <string name="sample_text_post_trip_schedule">여행 일정</string>

    <string name="sample_text_tv_nickname_name_left">_____</string>
    <string name="sample_text_tv_nickname_name_right"> 님,</string>
    <string name="sample_text_nickname_title">PaeParo와 떠날 준비가 되셨나요?</string>
    <string name="sample_text_edt_nickname">닉네임 입력</string>
    <string name="sample_text_nickname_warning1">닉네임에는 특수문자와 공백을 포함할 수 없습니다</string>
    <string name="sample_text_nickname_warning2">닉네임 길이는 최소 2자리, 최대 12자리까지 가능합니다</string>
    <string name="sample_text_nickname_warning3">설정한 닉네임은 추후 변경이 불가능합니다</string>
    <string name="sample_text_btn_nickname_next">다음</string>

    <string name="sample_text_tv_home_nickname">___님,</string>
    <string name="sample_text_tv_home_welcome">새로운 여행을 시작해보세요</string>
    <string name="sample_text_tv_home_create_plan">와 여행 떠나기</string>
    <string name="sample_text_tv_home_paeparo_recommend"> 추천 픽</string>
    <string name="sample_text_tv_home_recommend_desc">PaeParo가 딱 맞는 여행을 만들어봤어요!</string>
    <string name="sample_text_tv_home_recommend_info">#휴식 #바다 #가족\n3명 ~ 4명\n4박 5일</string>
    <string name="sample_text_tv_home_recommend_price">₩ 1,200,000</string>

    <string name="sample_text_tv_personal_title1">잠깐!</string>
    <string name="sample_text_tv_personal_title2">나만의 맞춤 서비스를 이용해보세요</string>
    <string name="sample_text_tv_personal_title3">아래의 항목에 대해 알려주시면 %s님에게 더 관련 있는 여행 일정들을 제공받으실 수 있습니다</string>
    <string name="sample_text_tv_personal_gender">성별</string>
    <string name="gender_male">남성</string>
    <string name="gender_female">여성</string>
    <string name="sample_text_tv_personal_age">연령대</string>
    <string name="age_teens">10대</string>
    <string name="age_twenty">20대</string>
    <string name="age_thirty">30대</string>
    <string name="age_forty">40대</string>
    <string name="age_fifty">50대</string>
    <string name="sample_text_tv_personal_style">취향</string>
    <string name="sample_text_tv_personal_style_explain">본인의 여행에서 우선순위를 순서대로 골라주세요!</string>
    <string name="style_style1">명소</string>
    <string name="style_style2">쇼핑</string>
    <string name="style_style3">먹거리</string>
    <string name="style_style4">힐링</string>
    <string name="style_style5">액티비티</string>
    <string name="style_style6">문화/예술</string>
    <string name="style_style7">숙소</string>
    <string name="sample_text_tv_personal_nextButton">Paeparo와 함께 여행 시작</string>

    <string name="sample_text_no_trip">생성된 여행 없음</string>
    <string name="sample_text_create_trip_desc">아래 버튼을 눌러 새로운 여행 일정을\n만들어보세요</string>
    <string name="sample_text_go_trip">와 여행 떠나기</string>
    <string name="sample_text_item_trip_place_icon_desc">위치</string>
    <string name="sample_text_trip_ongoing_trip">진행 중인 여행</string>
    <string name="sample_text_trip_planning_trip">계획 중인 여행</string>
    <string name="sample_text_trip_past_trip">지난 여행</string>
    <string name="sample_text_trip_no_planning_trip">계획 중인 여행 없음</string>
    <string name="date_range">%1$s ~ %2$s</string>
    <string name="members_count">%1$d명과 함께하고 있습니다</string>
    <string name="invitation_members_count">%1$d명</string>
    <string name="desc_invitation">초대</string>
    <string name="sample_text_invitation_list_title">초대받은 여행</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="home_text_nickname">닉네임</string>
    <string name="home_text_like">찜한 일정</string>
    <string name="home_text_comment">댓글 단 글</string>
    <string name="home_text_settings">설정</string>
    <string name="home_text_faq">자주 묻는 질문(FAQ)</string>


    <string name="profile_text_like">좋아요한 일정</string>

    <string name="home_settings_user">회원</string>
    <string name="home_settings_user_delete">회원탈퇴</string>
    <string name="home_settings_alarm">알람</string>
    <string name="home_settings_version">버전</string>
    <string name="home_settings_logout">로그아웃</string>
    <string name="btn_next">다음</string>

    <string name="tab_menu_community">커뮤니티</string>
    <string name="tab_menu_trip">여행</string>
    <string name="tab_menu_myinfo">내 정보</string>
    <string name="tab_menu_invitation">초대</string>
    <string name="btn_invite_companion">초대하기</string>
    <string name="companion_total">%s</string>
</resources>