<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.NickNameActivity">

    <!--가변적용-->
    <TextView
        android:id="@+id/tv_nickname_name_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:ellipsize="end"
        android:text="@string/sample_text_tv_nickname_name_left"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:textStyle="bold"

        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_nickname_name_right"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/tv_nickname_name_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:paddingStart="0dp"
        android:paddingEnd="5dp"
        android:text="@string/sample_text_tv_nickname_name_right"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_nickname_name_left"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />


    <TextView
        android:id="@+id/tv_nickname_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="0dp"
        android:paddingStart="0dp"
        android:paddingEnd="20dp"
        android:text="@string/sample_text_nickname_title"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_nickname_name_left" />

    <EditText
        android:id="@+id/edt_nickname"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"

        android:background="@drawable/bg_edt_nickname"
        android:hint="@string/sample_text_edt_nickname"
        android:inputType="text"
        android:maxLength="15"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:textColor="#B4B4B4"
        android:textColorHint="#B4B4B4"
        android:textSize="20sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_nickname_title"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.9" />

    <CheckBox
        android:id="@+id/cb_nickname_warning1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="0dp"
        android:checked="false"
        android:clickable="false"
        android:focusable="false"
        android:paddingStart="0dp"
        android:paddingEnd="20dp"
        android:text="@string/sample_text_nickname_warning1"
        android:textColor="#999999"
        android:textSize="15sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_nickname"
        app:layout_constraintVertical_bias="0.1" />

    <CheckBox
        android:id="@+id/cb_nickname_warning2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="0dp"
        android:checked="false"
        android:clickable="false"
        android:focusable="false"
        android:paddingStart="0dp"
        android:paddingEnd="20dp"
        android:text="@string/sample_text_nickname_warning2"
        android:textColor="#999999"
        android:textSize="15sp"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cb_nickname_warning1"
        app:layout_constraintVertical_bias="0" />

    <CheckBox
        android:id="@+id/cb_nickname_warning3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="0dp"
        android:checked="false"
        android:clickable="false"
        android:focusable="false"
        android:paddingStart="0dp"
        android:paddingEnd="20dp"
        android:text="@string/sample_text_nickname_warning3"
        android:textColor="#999999"
        android:textSize="15sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cb_nickname_warning2"
        app:layout_constraintVertical_bias="0" />


    <Button
        android:id="@+id/btn_nickname_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="#DD4C4C"
        android:text="@string/sample_text_btn_nickname_next"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cb_nickname_warning3"
        app:layout_constraintVertical_bias="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>