<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_trip_empty_image"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:contentDescription="@string/sample_text_no_trip"
        android:src="@drawable/ic_trip_empty" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:letterSpacing="0.05"
        android:text="@string/sample_text_no_trip"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:letterSpacing="0.05"
        android:text="@string/sample_text_create_trip_desc"
        android:textAlignment="center"
        android:textColor="#E1E1E1"
        android:textSize="14sp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/btn_trip_create_trip"
        android:layout_width="288dp"
        android:layout_height="48dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/create_new_trip_button"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#DD4C4C"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_text_trips_go_trip"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>